--- a/index.html
+++ b/index.html
@@ -45,100 +45,101 @@
             <p>New York City!</p>
     </div>
 </div>
-<div id="ambox">
-        <div class="polaroid">
-            <img src="Bryanportrait.JPG" alt="Bryan Portrait" style="width:100%">
-        </div>
-    <h2 id="AM" class="titles" name="AM">About Me</h2>
-    <p id="AMtext">I'm a Chinese American born in Manhattan, New York City. Currently, I am an Advanced App Engineer responsible for providing clients with modern, innovative, technological solutions. Currently, I'm working for Accenture for one of their diamond clients in New York City, providing analytical and technical support for three complex API products for over +300 external clients globally. Prior to this, I was at Accenture for a diamond client in the Washington DC Area in Mobile and Web applications development and deliverables providing high tech solutions for consumer issues. </p>
-    <p id="AMtext">I graduated from Johns Hopkins University with a dual degree in Electrical and Computer Engineering and a minor in Computer Science in 2019. In the technical field, I've worked on smaller projects such as artificial intelligence chess playing algorithms and a child tracker bluetooth device at Johns Hopkins. In the summer of 2017, I designed and developed a cancer treatment implant at the Singapore Institute for Neurotechnology with Professor John Ho.</p>
-    <p id="AMtext">Outside of tech and medical technology, I enjoy hip hop and afrobeat dance, as well as cooking and eating food. In both fields, I was the Choreography head and Culinary Chair for Hopkin's Eclectics/SLAM dance teams and the Chinese Students Assocation from 2016-2019.</p>
-</div>
-<div id="projectstitle" class="title fadeInNoMove hidden">My Projects</p></div>
-<div id="projects">
-    <div id="works-grid" class="grid-container">
-        <div id="project 1" class="item1">
-            <img class="projectpic" src="Bryanportrait.JPG">
-            <div class="projectcap">
-                <a href="/project/project1">Project 1<br></a>
-                <div class="AMtext">Project 1 Type</div>
+<div id ="body" class="fadeInAnimated hidden"></div>
+    <div id="ambox">
+            <div class="polaroid">
+                <img src="Bryanportrait.JPG" alt="Bryan Portrait" style="width:100%">
             </div>
-        </div>
-        <div id="project 2" class="item2">
-            <img class="projectpic" src="Bryanportrait.JPG">
-            <div class="projectcap">
-                <a href="/project/project2">Project 2<br></a>
-                <div class="AMtext">Project 2 Type</div>
+        <h2 id="AM" class="titles" name="AM">About Me</h2>
+        <p id="AMtext">I'm a Chinese American born in Manhattan, New York City. Currently, I am an Advanced App Engineer responsible for providing clients with modern, innovative, technological solutions. Currently, I'm working for Accenture for one of their diamond clients in New York City, providing analytical and technical support for three complex API products for over +300 external clients globally. Prior to this, I was at Accenture for a diamond client in the Washington DC Area in Mobile and Web applications development and deliverables providing high tech solutions for consumer issues. </p>
+        <p id="AMtext">I graduated from Johns Hopkins University with a dual degree in Electrical and Computer Engineering and a minor in Computer Science in 2019. In the technical field, I've worked on smaller projects such as artificial intelligence chess playing algorithms, a physical therapy device for physically challenged children, and a valuables tracker bluetooth device at Johns Hopkins. In the summer of 2017, I designed and developed a cancer treatment implant at the Singapore Institute for Neurotechnology with Professor John Ho. </p>
+        <p id="AMtext">Outside of tech and medical technology, I enjoy hip hop and afrobeat dance, as well as cooking and eating food. In both fields, I was the Choreography head and Culinary Chair for Hopkin's Eclectics/SLAM dance teams and the Chinese Students Assocation from 2016-2019 leading both groups and organizing large scale events for the general student body. </p>
+    </div>
+    <div id="projectstitle" class="title fadeInNoMove hidden">My Projects</p></div>
+    <div id="projects">
+        <div id="works-grid" class="grid-container">
+            <div id="project 1" class="item1">
+                <img class="projectpic" src="Bryanportrait.JPG">
+                <div class="projectcap">
+                    <a href="/project/project1">Project 1<br></a>
+                    <div class="AMtext">Project 1 Type</div>
+                </div>
             </div>
-        </div>
-        <div id="project 3" class="item3">
-            <img class="projectpic" src="Bryanportrait.JPG">
-            <div class="projectcap">
-                <a href="/project/project3">Project 3<br></a>
-                <div class="AMtext">Project 3 Type</div>
+            <div id="project 2" class="item2">
+                <img class="projectpic" src="Bryanportrait.JPG">
+                <div class="projectcap">
+                    <a href="/project/project2">Project 2<br></a>
+                    <div class="AMtext">Project 2 Type</div>
+                </div>
             </div>
-        </div>
-        <div id="project 4" class="item4">
-            <img class="projectpic" src="Bryanportrait.JPG">
-            <div class="projectcap">
-                <a href="/project/project4">Project 4<br></a>
-                <div class="AMtext">Project 4 Type</div>
+            <div id="project 3" class="item3">
+                <img class="projectpic" src="Bryanportrait.JPG">
+                <div class="projectcap">
+                    <a href="/project/project3">Project 3<br></a>
+                    <div class="AMtext">Project 3 Type</div>
+                </div>
+            </div>
+            <div id="project 4" class="item4">
+                <img class="projectpic" src="Bryanportrait.JPG">
+                <div class="projectcap">
+                    <a href="/project/project4">Project 4<br></a>
+                    <div class="AMtext">Project 4 Type</div>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div id="timeline" class="title">Timeline</p></div>
-    <div class="timeline">
-        <ul>
-            <li>
-                <div class="content">
-                    <h3>What is this?</h3>
-                    <p>Woah this is my life :3</p>
-                </div>
-                <div class="time">
-                    <h4>January 2019</h4>
-                </div>
-            </li>
-            <li>
-                <div class="content">
-                    <h3>What is this?</h3>
-                    <p>Woah this is my life :3</p>
-                </div>
-                <div class="time">
-                    <h4>January 2019</h4>
-                </div>
-            </li>
-            <li>
-                <div class="content">
-                    <h3>What is this?</h3>
-                    <p>Woah this is my life :3</p>
-                </div>
-                <div class="time">
-                    <h4>January 2019</h4>
-                </div>
-            </li>
-            <li>
-                <div class="content">
-                    <h3>What is this?</h3>
-                    <p>Woah this is my life :3</p>
-                </div>
-                <div class="time">
-                    <h4>January 2019</h4>
-                </div>
-            </li>
-            <style="clear: both;"></style>
-        </ul>
+    <div id="timeline" class="title">Timeline</p></div>
+        <div class="timeline">
+            <ul>
+                <li>
+                    <div class="content">
+                        <h3>What is this?</h3>
+                        <p>Woah this is my life :3</p>
+                    </div>
+                    <div class="time">
+                        <h4>January 2019</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="content">
+                        <h3>What is this?</h3>
+                        <p>Woah this is my life :3</p>
+                    </div>
+                    <div class="time">
+                        <h4>January 2019</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="content">
+                        <h3>What is this?</h3>
+                        <p>Woah this is my life :3</p>
+                    </div>
+                    <div class="time">
+                        <h4>January 2019</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="content">
+                        <h3>What is this?</h3>
+                        <p>Woah this is my life :3</p>
+                    </div>
+                    <div class="time">
+                        <h4>January 2019</h4>
+                    </div>
+                </li>
+                <style="clear: both;"></style>
+            </ul>
+        </div>
+    <div id="ambox">
+        <h2 id="cooking" class="titles">Cooking</h2>
+        <div class="polaroid-cooking">
+                <img src="Bryanportrait.JPG" alt="Bryan Portrait" style="width:100%">
+        </div>
+        <p id="AMtext">I'm a Chinese American born in the heart of Manhattan, New York City. Currently, I am an Advanced App Engineering Analyst responsible for providing clients with modern, innovative, technological solutions. I've most recently worked at Accenture for a diamond client in the Washington DC Area in Mobile and Web applications development and deliverables.</p>
+        <p id="AMtext">I graduated from Johns Hopkins University with a dual degree in Electrical and Computer Engineering and a minor in Computer Science in 2019. In the technical field, I've worked on smaller projects such as artificial intelligence chess playing algorithms and a child tracker bluetooth device at Johns Hopkins. In the summer of 2017, I designed and developed a cancer treatment implant at the Singapore Institute for Neurotechnology with Professor John Ho.</p>
+        <p id="AMtext">Outside of tech and medical technology, I enjoy hip hop and afrobeat dance, as well as cooking and eating food. In both fields, I was the Choreography head and Culinary Chair for Hopkin's Eclectics/SLAM dance teams and the Chinese Students Assocation from 2016-2019.</p>
     </div>
-<div id="ambox">
-    <h2 id="cooking" class="titles">Cooking</h2>
-    <div class="polaroid-cooking">
-            <img src="Bryanportrait.JPG" alt="Bryan Portrait" style="width:100%">
-    </div>
-    <p id="AMtext">I'm a Chinese American born in the heart of Manhattan, New York City. Currently, I am an Advanced App Engineering Analyst responsible for providing clients with modern, innovative, technological solutions. I've most recently worked at Accenture for a diamond client in the Washington DC Area in Mobile and Web applications development and deliverables.</p>
-    <p id="AMtext">I graduated from Johns Hopkins University with a dual degree in Electrical and Computer Engineering and a minor in Computer Science in 2019. In the technical field, I've worked on smaller projects such as artificial intelligence chess playing algorithms and a child tracker bluetooth device at Johns Hopkins. In the summer of 2017, I designed and developed a cancer treatment implant at the Singapore Institute for Neurotechnology with Professor John Ho.</p>
-    <p id="AMtext">Outside of tech and medical technology, I enjoy hip hop and afrobeat dance, as well as cooking and eating food. In both fields, I was the Choreography head and Culinary Chair for Hopkin's Eclectics/SLAM dance teams and the Chinese Students Assocation from 2016-2019.</p>
 </div>
-
 
 <!--
     <main class="container">
