--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>New York City!</p>
     </div>
 </div>
-<div id ="body" class="fadeInAnimated hidden"></div>
+<div id ="blackbody" class="fadeInAnimated hidden"></div>
     <div id="ambox">
             <div class="polaroid">
                 <img src="Bryanportrait.JPG" alt="Bryan Portrait" style="width:100%">
