--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
             <p>New York City!</p>
     </div>
 </div>
-<div id="blackbody" class="fadeInAnimated hidden">
+<div>
+    <p>
+
+
+    </p>
+</div>
+<div>
     <div id="ambox">
             <div class="polaroid">
                 <img src="Bryanportrait.JPG" alt="Bryan Portrait" style="width:100%">
