--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
     <p>
 
 
-        
+
 
     </p>
 </div>
-<div>
+<div id="blackbody">
     <div id="ambox">
             <div class="polaroid">
                 <img src="Bryanportrait.JPG" alt="Bryan Portrait" style="width:100%">
