adding cooking section and testing it out

--- a/index.html
+++ b/index.html
@@ -40,12 +40,10 @@
     </div>
 </div>
 <div>
-    <p>
-
-
-
-
-    </p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
 </div>
 <div id="blackbody">
     <div id="ambox">
@@ -135,11 +133,11 @@
     <div id="ambox">
         <h2 id="cooking" class="titles">Cooking</h2>
         <div class="polaroid-cooking">
-                <img src="Bryanportrait.JPG" alt="Bryan Portrait" style="width:100%">
+                <img src="food 1.JPG" alt="food 1" style="width:100%">
         </div>
-        <p id="AMtext">I'm a Chinese American born in the heart of Manhattan, New York City. Currently, I am an Advanced App Engineering Analyst responsible for providing clients with modern, innovative, technological solutions. I've most recently worked at Accenture for a diamond client in the Washington DC Area in Mobile and Web applications development and deliverables.</p>
-        <p id="AMtext">I graduated from Johns Hopkins University with a dual degree in Electrical and Computer Engineering and a minor in Computer Science in 2019. In the technical field, I've worked on smaller projects such as artificial intelligence chess playing algorithms and a child tracker bluetooth device at Johns Hopkins. In the summer of 2017, I designed and developed a cancer treatment implant at the Singapore Institute for Neurotechnology with Professor John Ho.</p>
-        <p id="AMtext">Outside of tech and medical technology, I enjoy hip hop and afrobeat dance, as well as cooking and eating food. In both fields, I was the Choreography head and Culinary Chair for Hopkin's Eclectics/SLAM dance teams and the Chinese Students Assocation from 2016-2019.</p>
+        <p id="AMtext">During my childhood, my mother would try to feed me all these different types of foods and I would hate all of them except for fish porridge. I was such a picky child when I was young, but now I've become a passionate foodie who wants to try cooking and eating everything! Once I joined the Chinese Students Association at Johns Hopkins University, I fell in love with cooking, and survived Baltimore's barren Chinese food landscape by making my own food!</p>
+        <p id="AMtext">I've made a lot of different foods, from finding the right puff pastry for a sweet and nutty baklava, to lugging a whole sushi boat from Japan to make a sashimi/sushi boat platter for my friends. I've even tried my hand at a 6 hour croquembouche that took a lot of love and labor to make an amazing french confectionary dessert.</p>
+        <p id="AMtext">Currently, living in New York pushes me to try more and more foods, as well as trying my hand at different cultural cuisines. I'm currently documenting all my cooking feats at <a href="https://www.instagram.com/cheftenderli/">Chef TenderLi</a> on Instagram! Come take a look, or see more of my cooking <a href-"#">here</a>!</p>
     </div>
 </div>
 <!--
