adding cooking section and testing it out and changed some stuff on timeline

--- a/index.html
+++ b/index.html
@@ -88,25 +88,25 @@
             </div>
         </div>
     </div>
-    <div id="timeline" class="title">Timeline</p></div>
+    <div id="timeline" class="title">Timeline of My Life</p></div>
         <div class="timeline">
             <ul>
                 <li>
                     <div class="content">
-                        <h3>What is this?</h3>
-                        <p>Woah this is my life :3</p>
+                        <h3>From the US to Singapore</h3>
+                        <p>I was born in Manhattan, New York lived in the US until moving to Singapore.</p>
                     </div>
                     <div class="time">
-                        <h4>January 2019</h4>
+                        <h4>1997 - 2004</h4>
                     </div>
                 </li>
                 <li>
                     <div class="content">
-                        <h3>What is this?</h3>
+                        <h3>Childhood in Singapore</h3>
                         <p>Woah this is my life :3</p>
                     </div>
                     <div class="time">
-                        <h4>January 2019</h4>
+                        <h4>2005 - 2009</h4>
                     </div>
                 </li>
                 <li>
@@ -133,7 +133,7 @@
     <div id="ambox">
         <h2 id="cooking" class="titles">Cooking</h2>
         <div class="polaroid-cooking">
-                <img src="food 1.JPG" alt="food 1" style="width:100%">
+                <img src="food 1.jpg" alt="food 1" style="width:100%">
         </div>
         <p id="AMtext">During my childhood, my mother would try to feed me all these different types of foods and I would hate all of them except for fish porridge. I was such a picky child when I was young, but now I've become a passionate foodie who wants to try cooking and eating everything! Once I joined the Chinese Students Association at Johns Hopkins University, I fell in love with cooking, and survived Baltimore's barren Chinese food landscape by making my own food!</p>
         <p id="AMtext">I've made a lot of different foods, from finding the right puff pastry for a sweet and nutty baklava, to lugging a whole sushi boat from Japan to make a sashimi/sushi boat platter for my friends. I've even tried my hand at a 6 hour croquembouche that took a lot of love and labor to make an amazing french confectionary dessert.</p>
