cleaning up timeline pt 2

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
             <ul>
                 <li>
                     <div class="content">
-                        <h3>From the US to Singapore</h3>
-                        <p>I was born in Manhattan, New York lived in the US until moving to Singapore.</p>
+                        <h3>ABC - American Born Chinese</h3>
+                        <p>I was born in Manhattan, New York in Chinatown. I lived here for a couple of years and also lived in Princeton Junction, New Jersey for the beginning of my life. From here, I lived in the US until moving across the Pacific Ocean to Singapore in 2005.</p>
                     </div>
                     <div class="time">
                         <h4>1997 - 2004</h4>
@@ -102,8 +102,8 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Childhood in Singapore</h3>
-                        <p>Woah this is my life :3</p>
+                        <h3>Majulah Singapura!</h3>
+                        <p>I was very reluctant to move to Singapore in the beginning; it was a new country, a new experience, and a new life! Slowly but surely, I grew to love Singapore and its melting pot of cultures, foods, and people. Singapore became my home and I made some friendships that lasted for years. Little did I know, I'd have to move to Beijing, China.</p>
                     </div>
                     <div class="time">
                         <h4>2005 - 2009</h4>
@@ -111,20 +111,20 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>What is this?</h3>
-                        <p>Woah this is my life :3</p>
+                        <h3>北京我爱你！(I love you Beijing!)</h3>
+                        <p>Living in China was a totally new experience. Having to deal with censorship and pollution made it tough to assimilate, but I grew fond of Beijing because it gave me a new love of my own culture and people, as well as great friendships that I made at my High School, The Western Academy of Beijing. From touring the mountains of 五台山 to the rivers of 桂林市, China was an amazing experience I would never give up.</p>
                     </div>
                     <div class="time">
-                        <h4>January 2019</h4>
+                        <h4>2009 - 2015</h4>
                     </div>
                 </li>
                 <li>
                     <div class="content">
-                        <h3>What is this?</h3>
-                        <p>Woah this is my life :3</p>
+                        <h3>Welcome to Baltimore!</h3>
+                        <p>I then started my studies of Electrical and Computer Engineering/Comp Sci at the Johns Hopkins University. I joined student performance groups such as SLAM and the Eclectics, joined a research team to develop cancer treatment implants, and created my own app and device called ValuLarm! I tried soul food for the first time, learned Korean, and made lasting friendships at Hopkins.</p>
                     </div>
                     <div class="time">
-                        <h4>January 2019</h4>
+                        <h4>2015 - 2019</h4>
                     </div>
                 </li>
                 <style="clear: both;"></style>
@@ -136,8 +136,14 @@
                 <img src="food 1.jpg" alt="food 1" style="width:100%">
         </div>
         <p id="AMtext">During my childhood, my mother would try to feed me all these different types of foods and I would hate all of them except for fish porridge. I was such a picky child when I was young, but now I've become a passionate foodie who wants to try cooking and eating everything! Once I joined the Chinese Students Association at Johns Hopkins University, I fell in love with cooking, and survived Baltimore's barren Chinese food landscape by making my own food!</p>
+        <div class="polaroid-cooking">
+            <img src="food 2.jpg" alt="food 2" style="width:100%">
+        </div>
         <p id="AMtext">I've made a lot of different foods, from finding the right puff pastry for a sweet and nutty baklava, to lugging a whole sushi boat from Japan to make a sashimi/sushi boat platter for my friends. I've even tried my hand at a 6 hour croquembouche that took a lot of love and labor to make an amazing french confectionary dessert.</p>
-        <p id="AMtext">Currently, living in New York pushes me to try more and more foods, as well as trying my hand at different cultural cuisines. I'm currently documenting all my cooking feats at <a href="https://www.instagram.com/cheftenderli/">Chef TenderLi</a> on Instagram! Come take a look, or see more of my cooking <a href-"#">here</a>!</p>
+        <div class="polaroid-cooking">
+            <img src="food 3.jpg" alt="food 2" style="width:100%">
+        </div>
+        p id="AMtext">Currently, living in New York pushes me to try more and more foods, as well as trying my hand at different cultural cuisines. I'm currently documenting all my cooking feats at <a href="https://www.instagram.com/cheftenderli/">Chef TenderLi</a> on Instagram! Come take a look, or see more of my cooking <a href-"#">here</a>!</p>
     </div>
 </div>
 <!--
