cleaning up timeline pt 3

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="polaroid-cooking">
             <img src="food 3.jpg" alt="food 2" style="width:100%">
         </div>
-        p id="AMtext">Currently, living in New York pushes me to try more and more foods, as well as trying my hand at different cultural cuisines. I'm currently documenting all my cooking feats at <a href="https://www.instagram.com/cheftenderli/">Chef TenderLi</a> on Instagram! Come take a look, or see more of my cooking <a href-"#">here</a>!</p>
+        <p id="AMtext">Currently, living in New York pushes me to try more and more foods, as well as trying my hand at different cultural cuisines. I'm currently documenting all my cooking feats at <a href="https://www.instagram.com/cheftenderli/">Chef TenderLi</a> on Instagram! Come take a look, or see more of my cooking <a href-"#">here</a>!</p>
     </div>
 </div>
 <!--
