--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <ul>
                 <li>
                     <div class="content">
-                        <h3>ABC - American Born Chinese</h3>
+                        <h3>American Born Chinese</h3>
                         <p>I was born in Manhattan, New York in Chinatown. I lived here for a couple of years and also lived in Princeton Junction, New Jersey for the beginning of my life. From here, I lived in the US until moving across the Pacific Ocean to Singapore in 2005.</p>
                     </div>
                     <div class="time">
@@ -111,7 +111,7 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>北京我爱你！(I love you Beijing!)</h3>
+                        <h3>北京我爱你!</h3>
                         <p>Living in China was a totally new experience. Having to deal with censorship and pollution made it tough to assimilate, but I grew fond of Beijing because it gave me a new love of my own culture and people, as well as great friendships that I made at my High School, The Western Academy of Beijing. From touring the mountains of 五台山 to the rivers of 桂林市, China was an amazing experience I would never give up.</p>
                     </div>
                     <div class="time">
@@ -120,11 +120,20 @@
                 </li>
                 <li>
                     <div class="content">
-                        <h3>Welcome to Baltimore!</h3>
+                        <h3>Forever a Bluejay!</h3>
                         <p>I then started my studies of Electrical and Computer Engineering/Comp Sci at the Johns Hopkins University. I joined student performance groups such as SLAM and the Eclectics, joined a research team to develop cancer treatment implants, and created my own app and device called ValuLarm! I tried soul food for the first time, learned Korean, and made lasting friendships at Hopkins.</p>
                     </div>
                     <div class="time">
                         <h4>2015 - 2019</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="content">
+                        <h3>Welcome to New York!</h3>
+                        <p>I then moved back to my hometown in New York! A lot of things have changed but the smells and sights of the city make me excited to be back. Currently, I'm working at Accenture for large diamond clients in Manhattan. I hope I can make the best of this experience and make a difference with my work!</p>
+                    </div>
+                    <div class="time">
+                        <h4>2019 - Current</h4>
                     </div>
                 </li>
                 <style="clear: both;"></style>
