cleaning up timeline pt 5

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <style="clear: both;"></style>
             </ul>
         </div>
-    <div id="ambox">
+    <div id="ambox2">
         <h2 id="cooking" class="titles">Cooking</h2>
         <div class="polaroid-cooking">
                 <img src="food 1.jpg" alt="food 1" style="width:100%">
