cleaning up timeline pt 6

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <img src="food 1.jpg" alt="food 1" style="width:100%">
         </div>
         <p id="AMtext">During my childhood, my mother would try to feed me all these different types of foods and I would hate all of them except for fish porridge. I was such a picky child when I was young, but now I've become a passionate foodie who wants to try cooking and eating everything! Once I joined the Chinese Students Association at Johns Hopkins University, I fell in love with cooking, and survived Baltimore's barren Chinese food landscape by making my own food!</p>
-        <div class="polaroid">
+        <div class="polaroid-cooking2">
             <img src="food 2.jpg" alt="food 2" style="width:100%">
         </div>
         <p id="AMtext">I've made a lot of different foods, from finding the right puff pastry for a sweet and nutty baklava, to lugging a whole sushi boat from Japan to make a sashimi/sushi boat platter for my friends. I've even tried my hand at a 6 hour croquembouche that took a lot of love and labor to make an amazing french confectionary dessert.</p>
