cleaned up timeline, added cooking and fixed background shade

--- a/index.html
+++ b/index.html
@@ -94,19 +94,25 @@
                 <li>
                     <div class="content">
                         <h3>American Born Chinese</h3>
-                        <p>I was born in Manhattan, New York in Chinatown. I lived here for a couple of years and also lived in Princeton Junction, New Jersey for the beginning of my life. From here, I lived in the US until moving across the Pacific Ocean to Singapore in 2005.</p>
+                        <p>I was born in Manhattan, New York in Chinatown. I lived here for a couple of years and also lived in Princeton Junction, New Jersey for the beginning of my life. I consider the US to be my home, and I try to be as "New Yorker" as possible. But considering I haven't really lived there all too long, I sometimes find it hard to say New York is my home. I then moved to Singapore in 2005.</p>
                     </div>
                     <div class="time">
                         <h4>1997 - 2004</h4>
+                    </div>
+                    <div class="photo">
+                        <img src="baby.jpg" alt="food 1" style="width:34%">
                     </div>
                 </li>
                 <li>
                     <div class="content">
                         <h3>Majulah Singapura!</h3>
-                        <p>I was very reluctant to move to Singapore in the beginning; it was a new country, a new experience, and a new life! Slowly but surely, I grew to love Singapore and its melting pot of cultures, foods, and people. Singapore became my home and I made some friendships that lasted for years. Little did I know, I'd have to move to Beijing, China.</p>
+                        <p>I was very reluctant to move to Singapore in the beginning; I was so scared about leaving all the things I considered home. However, I looked forward to a new country, a new experience, and a new life! Slowly but surely, I grew to love Singapore and its melting pot of cultures, foods, and people. Singapore became my home and I made some friendships that lasted for years. Little did I know, I'd have to move to Beijing, China.</p>
                     </div>
                     <div class="time">
                         <h4>2005 - 2009</h4>
+                    </div>
+                    <div class="photo">
+                        <img src="Singapore.jpg" alt="food 1" style="width:28%">
                     </div>
                 </li>
                 <li>
@@ -117,6 +123,9 @@
                     <div class="time">
                         <h4>2009 - 2015</h4>
                     </div>
+                    <div class="photo">
+                            <img src="beijing.jpg" alt="food 1" style="width:35%">
+                    </div>
                 </li>
                 <li>
                     <div class="content">
@@ -125,6 +134,9 @@
                     </div>
                     <div class="time">
                         <h4>2015 - 2019</h4>
+                    </div>
+                    <div class="photo">
+                            <img src="Hop.jpg" alt="food 1" style="width:28%">
                     </div>
                 </li>
                 <li>
@@ -135,6 +147,9 @@
                     <div class="time">
                         <h4>2019 - Current</h4>
                     </div>
+                    <div class="photo">
+                            <img src="nyc.jpg" alt="food 1" style="width:28%">
+                    </div>
                 </li>
                 <style="clear: both;"></style>
             </ul>
@@ -142,7 +157,7 @@
     <div id="ambox2">
         <h2 id="cooking" class="titles">Cooking</h2>
         <div class="polaroid-cooking">
-                <img src="food 1.jpg" alt="food 1" style="width:100%">
+                <img src="food 3.jpg" alt="food 1" style="width:100%">
         </div>
         <p id="AMtext">During my childhood, my mother would try to feed me all these different types of foods and I would hate all of them except for fish porridge. I was such a picky child when I was young, but now I've become a passionate foodie who wants to try cooking and eating everything! Once I joined the Chinese Students Association at Johns Hopkins University, I fell in love with cooking, and survived Baltimore's barren Chinese food landscape by making my own food!</p>
         <div class="polaroid-cooking2">
@@ -150,9 +165,10 @@
         </div>
         <p id="AMtext">I've made a lot of different foods, from finding the right puff pastry for a sweet and nutty baklava, to lugging a whole sushi boat from Japan to make a sashimi/sushi boat platter for my friends. I've even tried my hand at a 6 hour croquembouche that took a lot of love and labor to make an amazing french confectionary dessert.</p>
         <div class="polaroid-cooking">
-            <img src="food 3.jpg" alt="food 2" style="width:100%">
+            <img src="food 1.jpg" alt="food 2" style="width:100%">
         </div>
         <p id="AMtext">Currently, living in New York pushes me to try more and more foods, as well as trying my hand at different cultural cuisines. I'm currently documenting all my cooking feats at <a href="https://www.instagram.com/cheftenderli/">Chef TenderLi</a> on Instagram! Come take a look, or see more of my cooking <a href-"#">here</a>!</p>
+        <p id="AMtext">Hope you follow me on my cooking journey!</p>
     </div>
 </div>
 <!--
