added resume and resume button

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
         <a href="#">HOME</a>
         <a href="#AM">ABOUT</a>
         <a href="#projectstitle">PROJECTS</a>
-        <a href="#">RESUME</a>
+        <a href="Bryan Li Resume.pdf">RESUME</a>
         <a href="#timeline">TIMELINE</a>
         <a href="#cooking">COOKING</a>
-        <a href="#">DANCE</a>
         <a href="#">TRAVEL</a>
         <a href="#">CONTACT</a>
     </nav>
@@ -37,6 +36,9 @@
             <p>SWE · Dancer · Chef · Traveler</p>
             <p>based in the heart of</p>
             <p>New York City!</p>
+    </div>
+    <div id="resumebutton" class="fadeInAnimated hidden">
+        <div class="button button-1" onclick="window.open('Bryan Li Resume.pdf')">See My Resume</div>
     </div>
 </div>
 <div>
@@ -88,13 +90,14 @@
             </div>
         </div>
     </div>
-    <div id="timeline" class="title">Timeline of My Life</p></div>
+    <div id="timeline" class="title">Timeline</p></div>
         <div class="timeline">
             <ul>
                 <li>
                     <div class="content">
                         <h3>American Born Chinese</h3>
-                        <p>I was born in Manhattan, New York in Chinatown. I lived here for a couple of years and also lived in Princeton Junction, New Jersey for the beginning of my life. I consider the US to be my home, and I try to be as "New Yorker" as possible. But considering I haven't really lived there all too long, I sometimes find it hard to say New York is my home. I then moved to Singapore in 2005.</p>
+                        <p>I was born in Manhattan New York in Chinatown. I lived here for a couple of years and also lived in Princeton Junction, New Jersey for the beginning of my life.</p> 
+                        <p>I consider the US to be my home, and I try to be as "New Yorker" as possible. But considering I haven't really lived there all too long, I sometimes find it hard to say New York is my home. I then moved to Singapore in 2005.</p>
                     </div>
                     <div class="time">
                         <h4>1997 - 2004</h4>
@@ -106,7 +109,8 @@
                 <li>
                     <div class="content">
                         <h3>Majulah Singapura!</h3>
-                        <p>I was very reluctant to move to Singapore in the beginning; I was so scared about leaving all the things I considered home. However, I looked forward to a new country, a new experience, and a new life! Slowly but surely, I grew to love Singapore and its melting pot of cultures, foods, and people. Singapore became my home and I made some friendships that lasted for years. Little did I know, I'd have to move to Beijing, China.</p>
+                        <p>I was very reluctant to move to Singapore in the beginning; I was so scared about leaving all the things I considered home. However, I looked forward to a new country, a new experience, and a new life!</p> 
+                        <p>Slowly but surely, I grew to love Singapore and its melting pot of cultures, foods, and people. Singapore became my home and I made some friendships that lasted for years. Little did I know, I'd have to move to Beijing, China.</p>
                     </div>
                     <div class="time">
                         <h4>2005 - 2009</h4>
@@ -118,7 +122,8 @@
                 <li>
                     <div class="content">
                         <h3>北京我爱你!</h3>
-                        <p>Living in China was a totally new experience. Having to deal with censorship and pollution made it tough to assimilate, but I grew fond of Beijing because it gave me a new love of my own culture and people, as well as great friendships that I made at my High School, The Western Academy of Beijing. From touring the mountains of 五台山 to the rivers of 桂林市, China was an amazing experience I would never give up.</p>
+                        <p>Living in China was a totally new experience. Having to deal with censorship and pollution made it tough to assimilate, but I grew fond of Beijing because it gave me a new love of my own culture and people, as well as great friendships that I made at my High School, The Western Academy of Beijing.</p>
+                        <p>From touring the mountains of 五台山 to the rivers of 桂林市, China was an amazing experience I would never give up.</p>
                     </div>
                     <div class="time">
                         <h4>2009 - 2015</h4>
@@ -130,7 +135,8 @@
                 <li>
                     <div class="content">
                         <h3>Forever a Bluejay!</h3>
-                        <p>I then started my studies of Electrical and Computer Engineering/Comp Sci at the Johns Hopkins University. I joined student performance groups such as SLAM and the Eclectics, joined a research team to develop cancer treatment implants, and created my own app and device called ValuLarm! I tried soul food for the first time, learned Korean, and made lasting friendships at Hopkins.</p>
+                        <p>I then started my studies of Electrical and Computer Engineering/Comp Sci at the Johns Hopkins University.</p>
+                        <p>I joined student performance groups such as SLAM and the Eclectics, joined a research team to develop cancer treatment implants, and created my own app and device called ValuLarm! I tried soul food for the first time, learned Korean, and made lasting friendships at Hopkins.</p>
                     </div>
                     <div class="time">
                         <h4>2015 - 2019</h4>
@@ -142,7 +148,8 @@
                 <li>
                     <div class="content">
                         <h3>Welcome to New York!</h3>
-                        <p>I then moved back to my hometown in New York! A lot of things have changed but the smells and sights of the city make me excited to be back. Currently, I'm working at Accenture for large diamond clients in Manhattan. I hope I can make the best of this experience and make a difference with my work!</p>
+                        <p>I then moved back to my hometown in New York! A lot of things have changed but the smells and sights of the city make me excited to be back.</p> 
+                        <p>Currently, I'm working at Accenture for large diamond clients in Manhattan. I hope I can make the best of this experience and make a difference with my work!</p>
                     </div>
                     <div class="time">
                         <h4>2019 - Current</h4>
