before I change the projects page

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <h4>2005 - 2009</h4>
                     </div>
                     <div class="photo">
-                        <img src="Singapore.jpg" alt="food 1" style="width:28%">
+                        <img src="singapore.jpg" alt="food 1" style="width:28%">
                     </div>
                 </li>
                 <li>
