--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
           crossorigin="anonymous">
     <link href="assets/styles.css" rel="stylesheet" />
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link rel="stylesheet" href="/path/to/flickity.css" media="screen">
     <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
@@ -68,39 +69,40 @@
         <p id="AMtext">I graduated from Johns Hopkins University with a dual degree in Electrical and Computer Engineering and a minor in Computer Science in 2019. In the technical field, I've worked on smaller projects such as artificial intelligence chess playing algorithms, a physical therapy device for physically challenged children, and a valuables tracker bluetooth device at Johns Hopkins. In the summer of 2017, I designed and developed a cancer treatment implant at the Singapore Institute for Neurotechnology with Professor John Ho. </p>
         <p id="AMtext">Outside of tech and medical technology, I enjoy hip hop and afrobeat dance, as well as cooking and eating food. In both fields, I was the Choreography head and Culinary Chair for Hopkin's Eclectics/SLAM dance teams and the Chinese Students Assocation from 2016-2019 leading both groups and organizing large scale events for the general student body. </p>
     </div>
-    <div id="projectstitle" class="title fadeInNoMove hidden">My Projects</p></div>
+    <div id="projectstitle" class="title fadeInNoMove hidden">Experience and Projects</p></div>
     <div id="projects">
         <div id="works-grid" class="grid-container">
             <div id="project 1" class="item1">
-                <img class="projectpic" src="Bryanportrait.JPG">
+                <img class="projectpic" src="images/valularm.jpg">
                 <div class="projectcap">
-                    <a href="/project/project1">Project 1<br></a>
-                    <div class="AMtext">Project 1 Type</div>
+                        <a id="AMtext4" href="/project/project1">ValuLarm<br></a>
+                        <div class="AMtext3">iOS App and Device for Valuables</div>
                 </div>
             </div>
             <div id="project 2" class="item2">
-                <img class="projectpic" src="Bryanportrait.JPG">
+                <img class="projectpic" src="images/Brain Scan.png">
                 <div class="projectcap">
-                    <a href="/project/project2">Project 2<br></a>
-                    <div class="AMtext">Project 2 Type</div>
+                    <a id="AMtext4" href="/project/project2">CV Brain Segmentation<br></a>
+                    <div class="AMtext3">Convolutional Neural Networks Image Classification</div>
                 </div>
             </div>
             <div id="project 3" class="item3">
-                <img class="projectpic" src="Bryanportrait.JPG">
+                <img class="projectpic" src="images/Therawack.jpg">
                 <div class="projectcap">
-                    <a href="/project/project3">Project 3<br></a>
-                    <div class="AMtext">Project 3 Type</div>
+                    <a id="AMtext4" href="/project/project3">TheraWack<br></a>
+                    <div class="AMtext3">Physical Therapy Game for Kids</div>
                 </div>
             </div>
             <div id="project 4" class="item4">
-                <img class="projectpic" src="Bryanportrait.JPG">
+                <img class="projectpic" src="images/Gawad kalinga.jpg">
                 <div class="projectcap">
-                    <a href="/project/project4">Project 4<br></a>
-                    <div class="AMtext">Project 4 Type</div>
+                    <a id="AMtext4" href="/project/project4">Gawad Kalinga<br></a>
+                    <div class="AMtext3">Sustainable Living and Regrowth</div>
                 </div>
             </div>
         </div>
     </div>
+    <!--TIMELINE-->
     <div id="timeline" class="title">Timeline</p></div>
         <div class="timeline">
             <ul>
@@ -172,6 +174,7 @@
                 <style="clear: both;"></style>
             </ul>
         </div>
+    <!--COOKING-->
     <div id="ambox2">
         <h2 id="cooking" class="titles">Cooking</h2>
         <div class="polaroid-cooking">
@@ -199,6 +202,7 @@
 -->
     <script src="polyfills.pack.js"></script>
     <script src="main.pack.js"></script>
+    <!--Fade In beginning for title screen effect-->
     <script>
     (function() {
     var elements;
@@ -228,7 +232,7 @@
     checkPosition();
     })();
     </script>
-
+    <!--Scrolling for Nav Bar-->
     <script>
     window.onscroll = function() {scrollFunction()};
 
@@ -240,6 +244,8 @@
     }
     }
     </script>
+    <!--Carousel-->
+    <script src="/path/to/flickity.pkgd.min.js"></script>
 </body>
 </html>
 
