--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
             <div id="project 1" class="item1">
                 <img class="projectpic" src="images/valularm.jpg">
                 <div class="projectcap">
-                        <a id="AMtext4" href="/project/project1">ValuLarm<br></a>
+                        <a id="AMtext4" href="project/valularm.html">ValuLarm<br></a>
                         <div class="AMtext3">iOS App and Device for Valuables</div>
                 </div>
             </div>
             <div id="project 2" class="item2">
                 <img class="projectpic" src="images/Brain Scan.png">
                 <div class="projectcap">
-                    <a id="AMtext4" href="/project/project2">CV Brain Segmentation<br></a>
+                    <a id="AMtext4" href="project/cvbrain.html">CV Brain Segmentation<br></a>
                     <div class="AMtext3">Convolutional Neural Networks Image Classification</div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                         <h4>1997 - 2004</h4>
                     </div>
                     <div class="photo">
-                        <img src="baby.jpg" alt="food 1" style="width:34%">
+                        <img src="images/baby.jpg" alt="food 1" style="width:34%">
                     </div>
                 </li>
                 <li>
@@ -129,7 +129,7 @@
                         <h4>2005 - 2009</h4>
                     </div>
                     <div class="photo">
-                        <img src="singapore.jpg" alt="food 1" style="width:28%">
+                        <img src="images/singapore.jpg" alt="food 1" style="width:28%">
                     </div>
                 </li>
                 <li>
@@ -142,7 +142,7 @@
                         <h4>2009 - 2015</h4>
                     </div>
                     <div class="photo">
-                            <img src="beijing.jpg" alt="food 1" style="width:35%">
+                            <img src="images/beijing.jpg" alt="food 1" style="width:35%">
                     </div>
                 </li>
                 <li>
@@ -155,7 +155,7 @@
                         <h4>2015 - 2019</h4>
                     </div>
                     <div class="photo">
-                            <img src="Hop.jpg" alt="food 1" style="width:28%">
+                            <img src="images/Hop.jpg" alt="food 1" style="width:28%">
                     </div>
                 </li>
                 <li>
@@ -168,7 +168,7 @@
                         <h4>2019 - Current</h4>
                     </div>
                     <div class="photo">
-                            <img src="nyc.jpg" alt="food 1" style="width:28%">
+                            <img src="images/nyc.jpg" alt="food 1" style="width:28%">
                     </div>
                 </li>
                 <style="clear: both;"></style>
@@ -178,15 +178,15 @@
     <div id="ambox2">
         <h2 id="cooking" class="titles">Cooking</h2>
         <div class="polaroid-cooking">
-                <img src="food 3.jpg" alt="food 1" style="width:100%">
+                <img src="images/food 3.jpg" alt="food 1" style="width:100%">
         </div>
         <p id="AMtext">During my childhood, my mother would try to feed me all these different types of foods and I would hate all of them except for fish porridge. I was such a picky child when I was young, but now I've become a passionate foodie who wants to try cooking and eating everything! Once I joined the Chinese Students Association at Johns Hopkins University, I fell in love with cooking, and survived Baltimore's barren Chinese food landscape by making my own food!</p>
         <div class="polaroid-cooking2">
-            <img src="food 2.jpg" alt="food 2" style="width:100%">
+            <img src="images/food 2.jpg" alt="food 2" style="width:100%">
         </div>
         <p id="AMtext">I've made a lot of different foods, from finding the right puff pastry for a sweet and nutty baklava, to lugging a whole sushi boat from Japan to make a sashimi/sushi boat platter for my friends. I've even tried my hand at a 6 hour croquembouche that took a lot of love and labor to make an amazing french confectionary dessert.</p>
         <div class="polaroid-cooking">
-            <img src="food 1.jpg" alt="food 2" style="width:100%">
+            <img src="images/food 1.jpg" alt="food 2" style="width:100%">
         </div>
         <p id="AMtext">Currently, living in New York pushes me to try more and more foods, as well as trying my hand at different cultural cuisines. I'm currently documenting all my cooking feats at <a href="https://www.instagram.com/cheftenderli/">Chef TenderLi</a> on Instagram! Come take a look, or see more of my cooking <a href-"#">here</a>!</p>
         <p id="AMtext">Hope you follow me on my cooking journey!</p>
