--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
             <div id="project 3" class="item3">
                 <img class="projectpic" src="images/Therawack.jpg">
                 <div class="projectcap">
-                    <a id="AMtext4" href="/project/project3">TheraWack<br></a>
+                    <a id="AMtext4" href="project/TheraWack.html">TheraWack<br></a>
                     <div class="AMtext3">Physical Therapy Game for Kids</div>
                 </div>
             </div>
             <div id="project 4" class="item4">
                 <img class="projectpic" src="images/Gawad kalinga.jpg">
                 <div class="projectcap">
-                    <a id="AMtext4" href="/project/project4">Gawad Kalinga<br></a>
+                    <a id="AMtext4" href="project/gawadkalinga.html">Gawad Kalinga<br></a>
                     <div class="AMtext3">Sustainable Living and Regrowth</div>
                 </div>
             </div>
